Add jvm flags